<resources>
    <string name="app_name">ContactApp</string>
    <string name="desc_btn_add">Add New contact</string>
    <string name="desc_btn_edit">Edit this contact</string>
    <string name="desc_btn_delete">Delete this contact</string>
    <string name="label_btn_back">Back</string>
    <string name="label_btn_add">Add</string>
    <string name="label_btn_edit">Edit</string>
    <string name="label_btn_delete">Delete</string>
    <string name="label_contact_name">Name</string>
    <string name="label_contact_phone">Phone Number</string>
    <string name="label_contact_email">Email</string>
    <string name="label_contact_adress">Address</string>
    <string name="value_contact_name">John Doe</string>
    <string name="value_contact_phone">0812345678</string>
    <string name="value_contact_email">johndoe@gmail.com</string>
    <string name="value_contact_address">Highway st., NYC</string>
    <string name="placeholder_email">example@email.com</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_cpassword">Confirm Password</string>
    <string name="label_button_email_verify">I have verified my email</string>
    <string name="label_button_forgot_password">Forgot Password?</string>
    <string name="label_button_login">Login</string>
    <string name="label_button_logout">Logout</string>
    <string name="label_button_register">Register</string>
    <string name="label_button_secondary_login">Login here</string>
    <string name="label_button_secondary_register">Register Now</string>
    <string name="text_email_verify_1">A verification email has been sent to your email.</string>
    <string name="text_email_verify_2">Please verify your email by click the link.</string>
    <string name="text_login">Already have an account?</string>
    <string name="text_register">Don\'t have an account?</string>
    <string name="title_email_verification">Email Verification</string>
</resources>
