<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ContactEditActivity"
    >

    <!-- Name Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameField"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="John Doe"
        app:placeholderTextColor="?attr/colorSecondary"
        >

        <!-- Input Name -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/label_contact_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone Number Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneField"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/nameField"
        app:placeholderText="+6281234567"
        app:placeholderTextColor="?attr/colorSecondary"
        >

        <!-- Input Phone Number -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:hint="@string/label_contact_phone"
            android:inputType="phone"
            android:minHeight="48dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/phoneField"
        app:placeholderText="johndoe@email.com"
        app:placeholderTextColor="?attr/colorSecondary"
        >

        <!-- Input Email -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/label_contact_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Address Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressField"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/emailField"
        app:placeholderText="Highway st., NYC"
        app:placeholderTextColor="?attr/colorSecondary"
        >

        <!-- Input Address -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/label_contact_adress"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Back Button -->
    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_btn_back"
        android:textAllCaps="false"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/btnEdit"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressField"
        app:layout_constraintWidth="0dp"
        />

    <!-- Insert Button -->
    <Button
        android:id="@+id/btnEdit"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_btn_edit"
        android:textAllCaps="false"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@id/addressField"
        app:layout_constraintWidth="0dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>